--- a/scss/layout/_conteiner.scss
+++ b/scss/layout/_conteiner.scss
@@ -1,12 +1,23 @@
 .conteiner {
-    width: 1200px;
     padding: 0px 15px;
     margin: 0 auto;
+    width: $mobile;
+
+    @include for-tablet {
+        width: $tablet;
+    }
+
+    @include for-desktop {
+        width: $desctop;
+    }
 
     &--centered {
-        display: flex;
-        align-items: center;
+        @include for-tablet {
+            display: flex;
+            align-items: center;
+        }
     }
+
     &__title--visually-hidden {
         @include visually-hidden;
     }
