--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,5 +17,6 @@
 @import "./components/catalog";
 @import "./components/header";
 @import "./components/contact-form";
+@import "./components/mobile-menu";
 
 @import "./layout/conteiner";
