--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -32,19 +32,25 @@
 }
 
 @mixin for-phone-only {
-  @media (max-width: $mobile) {
+  @media screen and (max-width: $mobile) {
+    @content;
+  }
+}
+
+@mixin for-phone {
+  @media screen and (min-width: $mobile) {
     @content;
   }
 }
 
 @mixin for-tablet {
-  @media (min-width: $tablet) {
+  @media screen and (min-width: $tablet) {
     @content;
   }
 }
 
 @mixin for-desktop {
-  @media (min-width: $desctop) {
+  @media screen and (min-width: $desctop) {
     @content;
   }
 }
