--- a/scss/utils/_placeholder.scss
+++ b/scss/utils/_placeholder.scss
@@ -11,6 +11,7 @@
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  font-family: "Roboto";
 
   &:hover,
   &:focus {
