--- a/scss/components/_main-section.scss
+++ b/scss/components/_main-section.scss
@@ -1,8 +1,7 @@
 .main-section {
     max-width: 1600px;
     margin: 0 auto;
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url("../images/overlay.jpg");
+
     background-repeat: no-repeat;
     background-position: center 0;
     background-size: cover;
@@ -10,18 +9,51 @@
     color: #ffffff;
     background-color: #2f303a;
     text-align: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+
+    /* Chrome/Edge/Opera/Samsung, Safari will fallback to this as well */
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        -webkit-image-set(url("/images/mobile/overlay.jpg") 1x, url("/images/mobile/overlay-2x.jpg") 2x);
+
+    /* Standard use */
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        image-set("/images/mobile/overlay.jpg" 1x, "/images/mobile/overlay-2x.jpg" 2x);
+
+    @include for-tablet {
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            -webkit-image-set(url("/images/tablet/overlay.jpg") 1x, url("/images/tablet/overlay-2x.jpg") 2x);
+
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            image-set("/images/tablet/overlay.jpg" 1x, "/images/tablet/overlay-2x.jpg" 2x);
+    }
+
+    @include for-desktop {
+        padding-top: 200px;
+        padding-bottom: 200px;
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            -webkit-image-set(url("/images/overlay.jpg") 1x, url("/images/overlay-2x.jpg") 2x);
+
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            image-set("/images/overlay.jpg" 1x, "/images/overlay-2x.jpg" 2x);
+    }
 
     &__description {
+        font-family: "Roboto";
         font-weight: 900;
-
-        font-size: 44px;
-        line-height: 1.36;
-        text-transform: uppercase;
+        font-size: 26px;
+        line-height: 42px;
+        width: 360px;
+        text-align: center;
         letter-spacing: 0.06em;
-        width: 696px;
+        text-transform: uppercase;
         margin: 0px auto 30px auto;
+
+        @include for-desktop {
+            font-size: 44px;
+            line-height: 1.36;
+            width: 696px;
+        }
     }
 
     &__btn {
