--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -4,10 +4,15 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    min-height: 581px;
-    min-width: 528px;
+    min-height: 609px;
+    min-width: 450px;
     background-color: #ffffff;
     padding: 40px;
+
+    @include for-desktop {
+        min-height: 581px;
+        min-width: 528px;
+    }
 
     &__close-btn {
         position: absolute;
@@ -66,4 +71,3 @@
         transform: translate(-50%, -50%) scale(0.9);
     }
 }
-
