--- a/scss/components/_benefits.scss
+++ b/scss/components/_benefits.scss
@@ -1,5 +1,9 @@
 .benefits {
-    padding-top: 94px;
+    padding-top: 60px;
+
+    @include for-desktop {
+        padding-top: 94px;
+    }
 
     &__caption {
         font-weight: 700;
@@ -16,15 +20,33 @@
     }
 
     &__list {
-        display: flex;
         margin-block-start: 0px;
         margin-block-end: 0px;
         padding-inline-start: 0px;
+
+        @include for-tablet {
+            display: flex;
+        }
+
+        @include for-tablet-only {
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
     }
 
     &__item {
-        width: 270px;
-        margin-right: 30px;
+        @include for-mobile-tablet {
+            margin-bottom: 30px;
+        }
+
+        @include for-tablet-only {
+            width: calc((100% - 4 * 15px) / 2);
+        }
+
+        @include for-desktop {
+            width: 270px;
+            margin-right: 30px;
+        }
     }
 
     &__item:last-child {
@@ -51,6 +73,12 @@
         line-height: 1.14;
         text-transform: uppercase;
         margin-bottom: 10px;
+
+        text-align: center;
+
+        @include for-tablet {
+            text-align: left;
+        }
     }
 
     &__description {
