--- a/css/main.css
+++ b/css/main.css
@@ -282,6 +282,13 @@ ul {
 .servise {
   padding-top: 94px;
   padding-bottom: 94px;
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .servise {
+    display: block;
+  }
 }
 
 .servise__caption {
@@ -732,9 +739,16 @@ ul {
 }
 
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background: #f5f4fa;
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team__caption {
@@ -750,9 +764,7 @@ ul {
 }
 
 .team__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
   -webkit-margin-before: 0px;
           margin-block-start: 0px;
   -webkit-margin-after: 0px;
@@ -761,8 +773,25 @@ ul {
           padding-inline-start: 0px;
 }
 
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .team__list {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .team__list .team__link {
-  width: 270px;
   text-align: center;
 }
 
@@ -773,8 +802,30 @@ ul {
   background-color: #ffffff;
 }
 
-.team__list .team__link:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 1199px) {
+  .team__link {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .team__link {
+    -ms-flex-preferred-size: calc((100% - 4 * 15px) / 2);
+        flex-basis: calc((100% - 4 * 15px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__link {
+    width: 270px;
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__list .team__link:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .team__desc {
