--- a/scss/components/_servise.scss
+++ b/scss/components/_servise.scss
@@ -2,6 +2,12 @@
     padding-top: 94px;
     padding-bottom: 94px;
 
+    display: none;
+
+    @include for-desktop {
+        display: block;
+    }
+
     &__caption {
         font-weight: 700;
         font-size: 36px;
@@ -17,6 +23,8 @@
         margin-block-start: 0px;
         margin-block-end: 0px;
         padding-inline-start: 0px;
+
+        
     }
 
     &__item {
