--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -1,7 +1,12 @@
 .team {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     background: #f5f4fa;
+
+    @include for-desktop {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 
     &__caption {
         font-weight: 700;
@@ -16,14 +21,22 @@
     }
 
     &__list {
-        display: flex;
+        display: block;
         margin-block-start: 0px;
         margin-block-end: 0px;
         padding-inline-start: 0px;
+
+        @include for-tablet {
+            display: flex;
+        }
+
+        @include for-tablet-only {
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
     }
 
     &__list &__link {
-        width: 270px;
         text-align: center;
     }
 
@@ -31,10 +44,25 @@
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
         background-color: #ffffff;
+
+        @include for-mobile-tablet {
+            margin-bottom: 30px;
+        }
+
+        @include for-tablet-only {
+            flex-basis: calc((100% - 4 * 15px) / 2);
+        }
+
+        @include for-desktop {
+            width: 270px;
+            margin-right: 30px;
+        }
     }
 
     &__list &__link:not(:last-child) {
-        margin-right: 30px;
+        @include for-desktop {
+            margin-right: 30px;
+        }
     }
 
     &__desc {
