--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -1,6 +1,11 @@
 .clients {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @include for-desktop {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 
     &__caption {
         font-weight: 700;
@@ -9,17 +14,31 @@
         text-align: center;
         margin-block-start: 0;
         margin-block-end: 0;
-        margin-bottom: 50px;
+        margin-bottom: 30px;
+
+        @include for-desktop {
+            margin-bottom: 50px;
+        }
     }
 
     &__list {
+        @extend %list;
         display: flex;
-        justify-content: center;
-        padding-inline-start: 0px;
+        flex-wrap: wrap;
+        margin: -15px;
+
+        @include for-desktop {
+            margin: 0px;
+            flex-wrap: nowrap;
+            justify-content: center;
+            padding-inline-start: 0px;
+        }
     }
 
     &__item:not(:last-child) {
-        margin-right: 30px;
+        @include for-desktop {
+            margin-right: 30px;
+        }
     }
 
     &__link:hover {
@@ -39,8 +58,19 @@
     }
 
     &__item {
-        width: 170px;
-        height: 92px;
+        flex-basis: calc((100% - 4 * 15px) / 2);
+        margin: 15px;
+
+        @include for-tablet {
+            flex-basis: calc((100% - 6 * 15px) / 3);
+            margin: 15px;
+        }
+
+        @include for-desktop {
+            width: 170px;
+            height: 92px;
+            margin: 0px;
+        }
     }
 
     &__link {
