--- a/css/main.css
+++ b/css/main.css
@@ -182,7 +182,7 @@ ul {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .benefits__list {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -198,7 +198,7 @@ ul {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .benefits__item {
     width: calc((100% - 4 * 15px) / 2);
   }
@@ -571,12 +571,26 @@ ul {
 }
 
 .footbar__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footbar__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: left;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
 }
 
 .footbar__logo {
@@ -588,6 +602,30 @@ ul {
   font-family: Raleway, sans-serif;
   text-decoration: none;
   color: #ffffff;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footbar__wraper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: 74px;
+    margin-left: 61px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footbar__wraper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .footbar-address {
@@ -660,21 +698,57 @@ ul {
 }
 
 .join {
-  margin-left: 70px;
+  margin-top: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .join {
+    margin-left: 70px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .join {
+    margin-top: 0px;
+  }
 }
 
 .subscription {
-  margin-left: 93px;
+  margin-top: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription {
+    margin-left: 93px;
+    margin-top: 0px;
+  }
 }
 
 .subscription-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .subscription-form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .subscription-form__email {
-  width: 358px;
+  width: 450px;
   padding: 15px 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -684,6 +758,17 @@ ul {
   background-color: transparent;
 }
 
+@media screen and (min-width: 1200px) {
+  .subscription-form__email {
+    width: 358px;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+}
+
 .subscription-form__btn {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -691,7 +776,7 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-left: 12px;
+  margin-top: 20px;
   text-align: left;
   font-weight: 700;
   font-size: 16px;
@@ -702,6 +787,13 @@ ul {
   border-radius: 4px;
   padding: 10px 29px;
   border: unset;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription-form__btn {
+    margin-left: 12px;
+    margin-top: 0px;
+  }
 }
 
 .subscription-form__icon {
@@ -824,7 +916,7 @@ ul {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .team__list {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -851,7 +943,7 @@ ul {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .team__link {
     -ms-flex-preferred-size: calc((100% - 4 * 15px) / 2);
         flex-basis: calc((100% - 4 * 15px) / 2);
