--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -50,7 +50,7 @@
 }
 
 @mixin for-tablet-only {
-  @media screen and (min-width: $tablet) and (max-width: $desktop) {
+  @media screen and (min-width: $tablet) and (max-width: 1199px) {
     @content;
   }
 }
