--- a/css/main.css
+++ b/css/main.css
@@ -963,7 +963,7 @@ ul {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .team__photo {
     width: 100%;
   }
@@ -1167,6 +1167,8 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1181,8 +1183,22 @@ ul {
           padding-inline-start: 0;
 }
 
+@media screen and (max-width: 767px) {
+  .catalog__list {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+}
+
 .catalog__item {
   margin-right: 8px;
+}
+
+@media screen and (max-width: 767px) {
+  .catalog__item {
+    margin-bottom: 8px;
+  }
 }
 
 .catalog__item:last-child {
