--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -32,7 +32,7 @@
 }
 
 @mixin for-phone-only {
-  @media screen and (max-width: $mobile) {
+  @media screen and (max-width: 767px) {
     @content;
   }
 }
