--- a/scss/components/_main-section.scss
+++ b/scss/components/_main-section.scss
@@ -14,28 +14,28 @@
 
     /* Chrome/Edge/Opera/Samsung, Safari will fallback to this as well */
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        -webkit-image-set(url("/images/mobile/overlay.jpg") 1x, url("/images/mobile/overlay-2x.jpg") 2x);
+        -webkit-image-set(url("../images/mobile/overlay.jpg") 1x, url("../images/mobile/overlay-2x.jpg") 2x);
 
     /* Standard use */
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        image-set("/images/mobile/overlay.jpg" 1x, "/images/mobile/overlay-2x.jpg" 2x);
+        image-set("../images/mobile/overlay.jpg" 1x, "../images/mobile/overlay-2x.jpg" 2x);
 
     @include for-tablet {
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            -webkit-image-set(url("/images/tablet/overlay.jpg") 1x, url("/images/tablet/overlay-2x.jpg") 2x);
+            -webkit-image-set(url("../images/tablet/overlay.jpg") 1x, url("../images/tablet/overlay-2x.jpg") 2x);
 
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            image-set("/images/tablet/overlay.jpg" 1x, "/images/tablet/overlay-2x.jpg" 2x);
+            image-set("../images/tablet/overlay.jpg" 1x, "../images/tablet/overlay-2x.jpg" 2x);
     }
 
     @include for-desktop {
         padding-top: 200px;
         padding-bottom: 200px;
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            -webkit-image-set(url("/images/overlay.jpg") 1x, url("/images/overlay-2x.jpg") 2x);
+            -webkit-image-set(url("../images/overlay.jpg") 1x, url("../images/overlay-2x.jpg") 2x);
 
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            image-set("/images/overlay.jpg" 1x, "/images/overlay-2x.jpg" 2x);
+            image-set("../images/overlay.jpg" 1x, "../images/overlay-2x.jpg" 2x);
     }
 
     &__description {
