--- a/scss/components/_project.scss
+++ b/scss/components/_project.scss
@@ -7,6 +7,10 @@
     flex-wrap: wrap;
     padding-inline-start: 0px;
 
+    @include for-tablet-only {
+        margin: -15px;
+    }
+
     &__link:hover,
     &__link:focus {
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -21,6 +25,11 @@
     &__item {
         margin-right: 30px;
         margin-bottom: 30px;
+
+        @include for-tablet-only {
+            flex-basis: calc((100% - 6 * 15px) / 3);
+            margin: 15px;
+        }
     }
 
     &__link {
