--- a/scss/components/catalog.scss
+++ b/scss/components/catalog.scss
@@ -1,6 +1,11 @@
 .catalog {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @include for-desktop {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 
     &__list {
         display: flex;
@@ -21,6 +26,7 @@
 
     &__item {
         margin-right: 8px;
+
         @include for-phone-only {
             margin-bottom: 8px;
         }
