fix for small device

--- a/css/main.css
+++ b/css/main.css
@@ -1111,6 +1111,12 @@ ul {
   overflow: hidden;
 }
 
+@media screen and (max-width: 767px) {
+  .project__img {
+    width: 100%;
+  }
+}
+
 .project__overlay {
   display: inline-block;
   content: "";
