--- a/scss/components/_project.scss
+++ b/scss/components/_project.scss
@@ -42,6 +42,12 @@
         overflow: hidden;
     }
 
+    &__img {
+        @include for-phone-only {
+            width: 100%;
+        }
+    }
+
     &__overlay {
         display: inline-block;
         content: "";
