--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -59,7 +59,7 @@
 
     &__contatcts {
         @extend %list;
-        margin-top: 302px;
+        margin-top: auto;
     }
 
     &__comunication-phone {
