--- a/css/main.css
+++ b/css/main.css
@@ -192,15 +192,9 @@ ul {
   }
 }
 
-@media screen and (max-width: 1199px) {
-  .benefits__item {
-    margin-bottom: 30px;
-  }
-}
-
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .benefits__item {
-    width: calc((100% - 4 * 15px) / 2);
+    width: calc((100% - 30px) / 2);
   }
 }
 
@@ -213,6 +207,18 @@ ul {
 
 .benefits__item:last-child {
   margin-right: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .benefits__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .benefits__item:nth-last-child(n + 3) {
+    margin-bottom: 30px;
+  }
 }
 
 .benefits__icon-wrapper {
@@ -943,23 +949,34 @@ ul {
   background-color: #ffffff;
 }
 
-@media screen and (max-width: 1199px) {
-  .team__link {
-    margin-bottom: 30px;
-  }
-}
-
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .team__link {
-    -ms-flex-preferred-size: calc((100% - 4 * 15px) / 2);
-        flex-basis: calc((100% - 4 * 15px) / 2);
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .team__link {
     width: 270px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .team__link:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__link:not(:last-child) {
     margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team__link:nth-last-child(n + 3) {
+    margin-bottom: 30px;
   }
 }
 
@@ -1089,7 +1106,6 @@ ul {
 }
 
 .project__item {
-  margin-right: 30px;
   margin-bottom: 30px;
 }
 
@@ -1098,6 +1114,12 @@ ul {
     -ms-flex-preferred-size: calc((100% - 6 * 15px) / 3);
         flex-basis: calc((100% - 6 * 15px) / 3);
     margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project__item {
+    margin-right: 30px;
   }
 }
 
@@ -1157,8 +1179,10 @@ ul {
   color: #ffffff;
 }
 
-.project__item:nth-child(3n) {
-  margin-right: 0px;
+@media screen and (min-width: 1200px) {
+  .project__item:nth-child(3n) {
+    margin-right: 0px;
+  }
 }
 
 .project__item:nth-last-child(-n + 3) {
@@ -1228,14 +1252,14 @@ ul {
   margin-right: 8px;
 }
 
-@media screen and (max-width: 767px) {
-  .catalog__item {
-    margin-bottom: 8px;
-  }
-}
-
 .catalog__item:last-child {
   margin-right: 0px;
+}
+
+@media screen and (max-width: 767px) {
+  .catalog__item:nth-last-child(n + 3) {
+    margin-bottom: 8px;
+  }
 }
 
 .catalog__btn {
@@ -1670,7 +1694,7 @@ ul {
 }
 
 .mobile-menu__contatcts {
-  margin-top: 302px;
+  margin-top: auto;
 }
 
 .mobile-menu__comunication-phone {
