--- a/scss/components/_project.scss
+++ b/scss/components/_project.scss
@@ -23,12 +23,15 @@
     }
 
     &__item {
-        margin-right: 30px;
         margin-bottom: 30px;
 
         @include for-tablet-only {
             flex-basis: calc((100% - 6 * 15px) / 3);
             margin: 15px;
+        }
+
+        @include for-desktop {
+            margin-right: 30px;
         }
     }
 
@@ -81,7 +84,9 @@
     }
 
     &__item:nth-child(3n) {
-        margin-right: 0px;
+        @include for-desktop {
+            margin-right: 0px;
+        }
     }
 
     &__item:nth-last-child(-n + 3) {
