--- a/css/main.css
+++ b/css/main.css
@@ -1124,6 +1124,24 @@ ul {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .project__item:last-child {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project__item:nth-child(3n) {
+    margin-right: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project__item:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
+}
+
 .project__link {
   text-decoration: none;
   display: block;
@@ -1178,16 +1196,6 @@ ul {
   line-height: 28px;
   letter-spacing: 0.03em;
   color: #ffffff;
-}
-
-@media screen and (min-width: 1200px) {
-  .project__item:nth-child(3n) {
-    margin-right: 0px;
-  }
-}
-
-.project__item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
 }
 
 .project__elements {
